objects/Log_Record__c/Log_Record__c.object-meta.xml
<CustomObject>
    <label>Log Record</label>
    <nameField>
        <displayFormat>L-{0000000000}</displayFormat>
        <label>Log No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>