objects/Log_Record__c/fields/action__c.field-meta.xml
<CustomField>
    <fullName>action__c</fullName>
    <label>action</label>
    <length>40</length>
    <type>Text</type>
</CustomField>