objects/Log_Record__c/fields/action_type__c.field-meta.xml
<CustomField>
    <fullName>action_type__c</fullName>
    <label>action type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>