objects/Log_Record__c/fields/application__c.field-meta.xml
<CustomField>
    <fullName>application__c</fullName>
    <label>application</label>
    <length>40</length>
    <type>Text</type>
</CustomField>