objects/Log_Record__c/fields/call_program__c.field-meta.xml
<CustomField>
    <fullName>call_program__c</fullName>
    <label>call program</label>
    <length>40</length>
    <type>Text</type>
</CustomField>