objects/Log_Record__c/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <label>Log Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>