objects/Log_Record__c/fields/log_long_time__c.field-meta.xml
<CustomField>
    <fullName>log_long_time__c</fullName>
    <label>log long time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>