objects/Log_Record__c/fields/log_time__c.field-meta.xml
<CustomField>
    <fullName>log_time__c</fullName>
    <label>log time</label>
    <type>DateTime</type>
</CustomField>