objects/Log_Record__c/fields/log_type__c.field-meta.xml
<CustomField>
    <fullName>log_type__c</fullName>
    <label>log type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>