objects/Log_Record__c/fields/message_2__c.field-meta.xml
<CustomField>
    <fullName>message_2__c</fullName>
    <label>message 2</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>