objects/Log_Record__c/fields/message_3__c.field-meta.xml
<CustomField>
    <fullName>message_3__c</fullName>
    <label>message 3</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>