objects/Log_Record__c/fields/message_4__c.field-meta.xml
<CustomField>
    <fullName>message_4__c</fullName>
    <label>message 4</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>