objects/Log_Record__c/fields/message__c.field-meta.xml
<CustomField>
    <fullName>message__c</fullName>
    <label>message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>