objects/Log_Record__c/fields/session_id__c.field-meta.xml
<CustomField>
    <fullName>session_id__c</fullName>
    <label>session id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>