objects/Log_Record__c/fields/tracking_id__c.field-meta.xml
<CustomField>
    <fullName>tracking_id__c</fullName>
    <label>tracking id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>