objects/Log_Record__c/fields/user_id__c.field-meta.xml
<CustomField>
    <fullName>user_id__c</fullName>
    <label>user id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>