objects/Log_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>log_time__c</columns>
    <columns>log_type__c</columns>
    <columns>user_id__c</columns>
    <columns>message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>